--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 .content{
     display: flex;
     flex-direction: column;
@@ -41,7 +39,7 @@
     display: grid;
     place-items: center;
     position: absolute;
-    background-color: rgb(180, 41, 41);
+    background-color: rgb(214, 0, 0);
     width: 3rem;
     border-radius: 9999px;
     height: 3rem;
@@ -80,13 +78,28 @@
 
 .col-span{
     grid-column: span 2 / span 2;
-    background-image: url("https://i.pinimg.com/564x/04/af/d9/04afd944e7037974e6b8dce20485dacb.jpg");
+    background-size: cover;
 }
 
 .row-span{
     grid-row: span 2 / span 2;
-    background-image: url("https://i.pinimg.com/564x/90/c0/ff/90c0ff426ac148772f7b1d33ae607188.jpg");
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+    background-size: cover;
+}
+
+input{
+    margin-left: 10px;
+    padding: 2px 10px 2px 10px;
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(189, 189, 189);
+    height: 20px;
+}
+
+button{
+    background-color: rgb(209, 209, 209);
+    border-style: none;
+    height: 25px;
+    width: 50px;
+    border-radius: 10px;
 }
